// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Downloads/DownloadToggle Current smoke-test 1`] = `
<div>
  <div>
    <div>
      <button type="button"
              role="switch"
              aria-label="LTS Versions"
              aria-checked="false"
      >
        LTS
      </button>
      <button type="button"
              role="switch"
              aria-label="Current Versions"
              aria-checked="true"
      >
        Current
      </button>
    </div>
  </div>
  <p>
    With the latest features
  </p>
</div>
`;

exports[`Downloads/DownloadToggle Default smoke-test 1`] = `
<div>
  <div>
    <div>
      <button type="button"
              role="switch"
              aria-label="LTS Versions"
              aria-checked="true"
      >
        LTS
      </button>
      <button type="button"
              role="switch"
              aria-label="Current Versions"
              aria-checked="false"
      >
        Current
      </button>
    </div>
  </div>
  <p>
    Recommended for most users
  </p>
</div>
`;
